src/objects/Travel_Itinerary_MERC__c.object
<CustomObject>
    <description>Stores Travel Itineraries for HCPs attending Meetings : MERC, CUST : Created on 10/09/2013 by John Adams, Mavens Consulting</description>
    <fields>
        <fullName>Account_MERC__c</fullName>
        <description>Master Detail  relationship between Travel Itinerary and the Account.  Created by John Adams 4/2/2014</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Travel Itineraries</relationshipLabel>
        <relationshipName>Travel_Itineraries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Number_MERC__c</fullName>
        <description>The PNR back office account number. Oliver Dunford 14th Dec 2013</description>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information_MERC__c</fullName>
        <description>Added per defect 108. Created 06/02/2014 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>Logistical information for internal use</inlineHelpText>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allwnc_Dstnc_Desc_MERC__c</fullName>
        <description>The quantity of miles or kilometers of distance that is allowed for car on this segment.
Created by John A Adams 12/13/2013</description>
        <label>Allowance Distance Description</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allwnc_Dstnc_Typ_MERC__c</fullName>
        <description>The code value of the unit of measurement for the allowance distance.  The Listed below are examples and may not be complete:: 
Miles 
Kilometers
Created by John A Adams 12/13/2013</description>
        <label>Allowance Distance Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anonymise_Record_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record is related to a non-hcp meeting participant and should be anonymised (via workflows)</description>
        <inlineHelpText>Indicates that this record is related to a non-hcp meeting participant and should be anonymised (via workflows)</inlineHelpText>
        <label>Anonymise Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arcrft_Typ_Cd_MERC__c</fullName>
        <description>The code identifying the type of equipment servicing the flight (model of plane).   Examples:  747, 727, L10.
Created by John A Adams 12/13/2013</description>
        <label>Aircraft Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrvl_Trmnl_Nm_MERC__c</fullName>
        <description>The name of the air terminal where the traveler&apos;s airplane will arrive – Change of Gauge
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Destination City &amp; Station/Airport</inlineHelpText>
        <label>Arrival Terminal Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bgn_Arprt_Cd_MERC__c</fullName>
        <description>The airport code designation for the point of origin for the trip.
Created by John A Adams 12/13/2013</description>
        <label>Begin Airport Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bgn_City_MERC__c</fullName>
        <description>The IATA City code designation of the car pick up location
Created by John A Adams 12/13/2013</description>
        <label>Begin City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bgn_Sttn_Cd_MERC__c</fullName>
        <description>The code value identifying the begin station for this rail segment.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Departure City &amp; Station/Airport</inlineHelpText>
        <label>Begin Station Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bgn_Sttn_Nm_MERC__c</fullName>
        <description>The name of the location where the departure portion of this segment will occur.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Departure City &amp; Station/Airport</inlineHelpText>
        <label>Begin Station Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Date_MERC__c</fullName>
        <description>The date the booking was done. Oliver Dunford 14th Dec 2013</description>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Information_MERC__c</fullName>
        <description>Holds booking information for Travel records : MERC : Created on 27/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Customer facing, information on services, ticket references, travel class etc</inlineHelpText>
        <label>Booking Information</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bus_Nmbr_MERC__c</fullName>
        <description>Identifies a specific Bus from one station to another. Created by Katy Lorenti 05/13/2014</description>
        <inlineHelpText>Company and Carrier Number</inlineHelpText>
        <label>Bus Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Clss_Cd_MERC__c</fullName>
        <description>The code value of the class of car requested for this segment.  Listed below are examples and may not be complete:
 M - Mini
 E - Economy
 C - Compact
 I - Intermediate
 S - Standard
 F - Full Size
 P - Premium
 L - Luxury
 X - Special
 O - Oversize
Created by John A Adams 12/13/2013</description>
        <label>Car Class Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Equip_Cd_MERC__c</fullName>
        <description>The code value of an item of option equipment that has been requested for a car segment.  Listed below are examples and may not be complete:
 BYC - Bicycle Rack
 CSI - Child Seat/Infant
 CST - Child Seat/Toddler
 HCL - Hand Control/Left
 HCR - Hand Control/Right
 LDP - Laserdisc Player
 LUG - Luggage Rack
 NAV - Navigation System
 PHN - Mobile Phone
 SIX - Six Passenger Car
 SKV - Ski Equipped Vehicle
 SNO - Snow Chains
 TAP - Cassette Player
Created by John A Adams 12/13/2013</description>
        <label>Car Equipment Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Rate_Cd_MERC__c</fullName>
        <description>The rate code associated with the car segment.
Created by John A Adams 12/13/2013</description>
        <label>Car Rate Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Typ_Cd_MERC__c</fullName>
        <description>The code value of the type of car requested for this segment.  Listed below are examples and may not be complete:
 B - 2 Door
 C - Car
 D - 4 Door
 F - 4 Wheel Drive
 J - All Terrain
 K - Truck
 L - Limousine
 P - Pickup
 R - Recreation Vehicle
 S - Sports Car
 T - Convertible
 V - Van
 W - Wagon
 X - Special
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Vehicle type, chaffeur contact details, other information for customer</inlineHelpText>
        <label>Vehicle and Chauffeur Information</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cd_Shr_Rmrk_MERC__c</fullName>
        <description>The name of the airline that has a code share
Created by John A Adams 12/13/2013</description>
        <label>Code Share Remark</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_MERC__c</fullName>
        <description>The name of the address city for this hotel property.
Created by John A Adams 12/13/2013</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clss_Sric_Cd_MERC__c</fullName>
        <description>The class of service code for an air segment.  Examples include F, Y, B, Q
Created by John A Adams 12/13/2013</description>
        <label>Class of Service Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cnnctn_Typ_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that indicates whether there is a connecting flight to this segment.
Created by John A Adams 12/13/2013</description>
        <label>Connection Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Combined_ID_MERC__c</fullName>
        <description>Checks for duplicate Hotel Travel Itinerary Values. Gets stamped in Force Unique Travel Itinerary field by workflow.  Created 06/04/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF (RecordType.DeveloperName = &quot;MERC_Hotel&quot;,  RecordTypeId &amp; &quot;-&quot; &amp; Meeting_Participant_MERC__c &amp; &quot;-&quot; &amp;  
  Meeting_Vendor_MERC__c , Id)</formula>
        <label>Combined ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_ToV_Reporting_Change_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HCP Care to confirm the change if ToV has already been reported for this meeting participant. Currnently restricted to the Hotel Record Type as this is the only Type driving ToV. Created 01/08/2014 by KLorenti, Mavens Consulting</description>
        <label>Confirm ToV Reporting Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number_MERC__c</fullName>
        <description>The number received from the vendor that indicates confirmation of the reservation.   The primary use of this number is to confirm reservations at the vendor location.  Note: for an air reservation the confirmation is the same as the airline record locator. Oliver Dunford 13th Dec 2013.</description>
        <label>Confirmation Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dly_Ext_Amnt_Desc_MERC__c</fullName>
        <description>The text describing the extra daily amount being charged for a service or product.
Created by John A Adams 12/13/2013</description>
        <label>Daily Extra Amount Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dprtr_Trmnl_Nm_MERC__c</fullName>
        <description>The name of the air terminal where the traveler&apos;s airplane will be departing.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Departure City &amp; Station/Airport</inlineHelpText>
        <label>Departure Terminal Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drp_off_Lctn_Desc_MERC__c</fullName>
        <description>The description of the location where a traveler is to drop off the car.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>This is the meeting point. Specify the name of airport or train station if applicable</inlineHelpText>
        <label>Drop off Location Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dstnc_Chrg_Amnt_Desc_MERC__c</fullName>
        <description>The text describing the distance amount being charged for a service or product.
Created by John A Adams 12/13/2013</description>
        <label>Distance Charge Amount Desc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Arprt_Cd_MERC__c</fullName>
        <description>Airport code for the final destination of a particular leg of the trip.
Created by John A Adams 12/13/2013</description>
        <label>End Airport Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_City_MERC__c</fullName>
        <description>The IATA City code designation of the car drop off location.
Created by John A Adams 12/13/2013</description>
        <label>End City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Sttn_Cd_MERC__c</fullName>
        <description>The code value identifying the end station for this rail segment.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Destination City &amp; Station/Airport</inlineHelpText>
        <label>End Station Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Sttn_Nm_MERC__c</fullName>
        <description>The name of the location where the return portion of this segment will occur.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Destination City &amp; Station/Airport</inlineHelpText>
        <label>End Station Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluate_Meeting_Process_Logic_MERC_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to kick-off Meeting Process Logic and Automation. Set via workflow, unchecked when code runs : MERC : Created on 22/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Evaluate Meeting Process Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Transaction_Flag_MERC__c</fullName>
        <description>A flag that indicates whether this ticket is being exchanged as part of the ticketing of this stored fare. Oliver Dunford 14th Dec 2013</description>
        <label>Exchange Transaction Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fare_Bss_Cd_MERC__c</fullName>
        <description>The unique identifier that is used to tie fare rules with fare amount.
Created by John A Adams 12/13/2013</description>
        <label>Fare Basis Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Nm_MERC__c</fullName>
        <description>The name by which this definition is known.   Hardcoded to &quot;Group Code&quot; unless defined otherwise
Created by John A Adams 12/13/2013</description>
        <label>Field Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value_Description_MERC__c</fullName>
        <description>The data value for this client reporting field information. Oliver Dunford 14th Dec 2013</description>
        <label>Field Value Description</label>
        <length>86</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_MERC__c</fullName>
        <description>First name of Traveller. Created 12/13/2013 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flght_Nmbr_MERC__c</fullName>
        <description>This is a number which identifies a specific flight from one airport to another.   The combination of Airline Code + Flight Number make it unique.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>Company and Carrier Number</inlineHelpText>
        <label>Flight Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Unique_Travel_Itinerary_MERC__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Populated by workflow to detect duplicate travel itinerary records. Created 06/04/2014 by KLorenti, Mavens Consulting</description>
        <label>Force Unique Travel Itinerary</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gg_Chng_Arprt_Cd_MERC__c</fullName>
        <description>The code of the airport where the traveler will use for gauge change.
Created by John A Adams 12/13/2013</description>
        <label>Gauge Change Airport Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Check_in_Time_MERC__c</fullName>
        <description>Pulls the check-in/out times from the Meeting Vendor record, these are used and shown to the HCP rather than the timetamp : MERC : Created on 11/05/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Hotel_Check_in_Time_MERC__c</formula>
        <inlineHelpText>Accurate standard check-in/check-out times; saved into Travel Itinerary and communicated to the HCP 

Must be in the format &quot;00:00&quot; for example &quot;08:00&quot;.</inlineHelpText>
        <label>Hotel Check-in Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Check_out_Time_MERC__c</fullName>
        <description>Pulls the check-in/out times from the Meeting Vendor record, these are used and shown to the HCP rather than the timetamp : MERC : Created on 11/05/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Hotel_Check_out_Time_MERC__c</formula>
        <inlineHelpText>Accurate standard check-in/check-out times; saved into Travel Itinerary and communicated to the HCP 

Must be in the format &quot;00:00&quot; for example &quot;08:00&quot;.</inlineHelpText>
        <label>Hotel Check-out Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Name_MERC__c</fullName>
        <description>Name of Hotel. Created 12/13/2013 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Account_MERC__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hrly_Ext_Chrg_Amnt_Desc_MERC__c</fullName>
        <description>The text describing the hourly extra amount being charged for a service or product.
Created by John A Adams 12/13/2013</description>
        <label>Hourly Extra Charge Amount Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Htl_Addrss_Typ_MERC__c</fullName>
        <description>Type of address for hotel is default of &quot;Alternate&quot;
Created by John A Adams 12/13/2013</description>
        <label>Hotel Address Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Htl_City_Cd_MERC__c</fullName>
        <description>City code for the location of the hotel
Created by John A Adams 12/13/2013</description>
        <label>Hotel City Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Htl_Fax_Nmbr_MERC__c</fullName>
        <description>FAX number of hotel
Created by John A Adams 12/13/2013</description>
        <label>Hotel Fax Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Htl_Phone_Nmbr_MERC__c</fullName>
        <description>Phone number of hotel.
Created by John A Adams 12/13/2013</description>
        <label>Hotel Phone Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Htl_Prprty_Cd_MERC__c</fullName>
        <description>The unique system code used to identify a Hotel Property.  This attribute usually will be optional since manually booked hotels do not have a property code.  (Note -- this may vary from GDS so it is important to consider this in the use of this item.)
Created by John A Adams 12/13/2013</description>
        <label>Hotel Property Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Flght_Ml_Desc_MERC__c</fullName>
        <description>FlightDetails.MealInfo
Created by John A Adams 12/13/2013</description>
        <label>In Flight Meal Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_ToV_MERC__c</fullName>
        <description>Formula to dictate whether ToV is picked up by triggers to update Meeting Participant.  Currently based off Status but can be changed in the future via configuration rather than changing code when Status values or rules change.  Oliver Dunford 11th June 2014.</description>
        <formula>IF( ISPICKVAL(Status_MERC__c, &quot;Confirmed&quot;), TRUE, FALSE)</formula>
        <label>Include ToV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Travel_ToV_Applicable_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once checked this record will be picked up and go toward the meeting participants Ground Transportation ToV for that specific Meeting Day (assuming a meeting day exists) : MERC : Created on 23/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Check this field to include this record as Individual Ground Transportation ToV for Individual Travel during a meeting.  This will combined with any group Ground Transportation ToV attributed for the meeting day for this meeting participant.</inlineHelpText>
        <label>Individual Travel ToV Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Notes_MERC__c</fullName>
        <description>Holds Internal Notes for Travel records : MERC : Created on 27/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Logistical comments related to proposal and booking</inlineHelpText>
        <label>Internal Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>International_Flag_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that indicates whether the travel crosses international boundaries. Oliver Dunford Dec 14th 2013</description>
        <label>International Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issued_GTM_Timestamp_MERC__c</fullName>
        <description>The date and time that the ticket was actually generated.  Espressed in GMT and must be less than the stored fare&apos;s ticket by date. Oliver Dunford 14th Dec 2013.</description>
        <label>Issued GTM Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name_MERC__c</fullName>
        <description>Last name of Traveller. Created 12/13/2013 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line1_MERC__c</fullName>
        <description>The first address line for this hotel property.
Created by John A Adams 12/13/2013</description>
        <label>Line1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lw_Fr_Amnt_MERC__c</fullName>
        <description>The amount of the lowest fare captured for this segment grouping.  Lowest fare available for the flight routing.  This is dependent on the travel counselor doing a low fare search.
Created by John A Adams 12/13/2013</description>
        <label>Low Fare Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Booking_Flag_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that indicates whether this segment was manually booked. 14th Dec 2013.</description>
        <label>Manual Booking Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_End_Date_Time_MERC__c</fullName>
        <description>Displays Meeting End Date and Time on Travel Itinerary. Created 02/03/2014 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_Participant_MERC__r.Meeting_MERC__r.End_Time_of_Meeting_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Id_MERC__c</fullName>
        <formula>CASESAFEID(Meeting_Participant_MERC__r.Meeting_MERC__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup from Travel Itinerary to Meeting Participant. Created 12/10/2013 by KLorenti, Mavens Consulting</description>
        <label>Meeting Participant</label>
        <referenceTo>Meeting_Participant_MERC__c</referenceTo>
        <relationshipLabel>Travel Itineraries</relationshipLabel>
        <relationshipName>Travel_Itineraries_MERC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Process_Logic_Key_MERC__c</fullName>
        <description>Used to compare against a matching key in the Meeting Process Logic object to drive the next set of automation : MERC : Created on 22/06/2015</description>
        <formula>&quot;Travel Proposal;&quot; &amp;  IF(Proposal_Counter_MERC__c &lt;= 1, &quot;TRUE&quot;, &quot;FALSE&quot;) &amp; &quot;;&quot; &amp; TEXT( Status_MERC__c )</formula>
        <label>Meeting Process Logic Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Date_Time_MERC__c</fullName>
        <description>Displays Meeting Start Date and Time on Travel Itinerary. Created 02/03/2014 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_Participant_MERC__r.Meeting_MERC__r.Start_Time_of_Meeting_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Status_MERC__c</fullName>
        <formula>text(Meeting_Participant_MERC__r.Meeting_MERC__r.Meeting_Status_MERC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Time_Zone_MERC__c</fullName>
        <formula>text(Meeting_Participant_MERC__r.Meeting_MERC__r.Meeting_Time_Zone_MERC__c)</formula>
        <label>Meeting Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Vendor_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship to Meeting Vendor. Created 12/5/2013 by KLorenti, Mavens Consulting</description>
        <label>Meeting Vendor</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Meeting_Vendor_MERC__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>HOTEL_MERC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Meeting_Vendor_MERC__c</referenceTo>
        <relationshipLabel>Travel Itineraries</relationshipLabel>
        <relationshipName>Travel_Itineraries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Vendor_Name_MERC__c</fullName>
        <description>Displays Meeting Vendor Name for Hotels. Created 01/20/2014 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Account_MERC__r.Name</formula>
        <label>Meeting Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_MERC__c</fullName>
        <description>Middle name of Traveller. Created 12/13/2013 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.Mdl_Nm_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Middle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mssd_Rsn_Cd_MERC__c</fullName>
        <description>This code describes the reason the lowest fare was not used.</description>
        <label>Missed Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mssge_Vrsn_MERC__c</fullName>
        <description>The schema version a document instance conforms to
Created by John A Adams 12/13/2013</description>
        <label>Message Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_MERC__c</fullName>
        <description>Used to order Travel Itinerary related list : MERC : Created on 9th July 2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>IF
	(RecordType.DeveloperName = &apos;MERC_Travel_Proposal&apos;, 
		Name &amp; TEXT(CASE(Proposal_Counter_MERC__c,	1,99, 
                             						2,98,
                             						3,97,
                             						4,96,
                             						5,95,
                             						6,94,
                             						7,93,
                             						8,92,
                             						9,91,
													10,90,
													11,89,
													12,87,
													13,86,
													14,85,
													0
					)
	)
,

IF
	(((RecordType.DeveloperName = &apos;MERC_Air&apos;) || (RecordType.DeveloperName = &apos;MERC_Bus&apos;) || (RecordType.DeveloperName = &apos;MERC_Rail&apos;))

	, 
		Travel_Proposal_MERC__r.Name &amp; &quot; - &quot; &amp; TEXT(CASE(Segment_Number__c,	1,99, 
                             												2,98,
                             												3,97,
                             												4,96,
                             												5,95,
                             												6,94,
                             												7,93,
                             												8,92,
                             												9,91,
                             												10,90,
																			11,89,
																			12,87,
																			13,86,
																			14,85,
                             												0

													)
	)
,

IF
	(((RecordType.DeveloperName = &apos;MERC_Car&apos;) || (RecordType.DeveloperName = &apos;MERC_Hotel&apos;))
	,
		Name,Name
	)
	)
)</formula>
        <label>Ordering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNR_MERC__c</fullName>
        <description>PNR</description>
        <label>Passenger Name Record #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pck_Up_Lctn_Desc_MERC__c</fullName>
        <description>The description of the location where a traveler is to pick up the car.
Created by John A Adams 12/13/2013</description>
        <inlineHelpText>This is the meeting point. Specify the name of airport or train station if applicable</inlineHelpText>
        <label>Pick Up Location Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_MERC__c</fullName>
        <description>Priority to apply Low (0-4) or High (5-9) if priority handling is necessary.  Unspecified in PNR data sync.
Created by John A Adams 12/13/2013</description>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_Counter_MERC__c</fullName>
        <description>Captures the number of proposals for the associated meting participant. Initially created for triggering of delegate management processes : MERC : Created on 19/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <label>Proposal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prprty_Nm_MERC__c</fullName>
        <description>The name of the hotel property.
Created by John A Adams 12/13/2013</description>
        <label>Property Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pseudo_City_MERC__c</fullName>
        <description>This is a code assigned by a GDS uniquely identifying an &apos;address&apos; on their GDS network. A branch typically has a single &apos;pseudo&apos; per GDS they&apos;re connected to. Oliver Dunford 14th Dec 2013</description>
        <label>Pseudo City</label>
        <length>86</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pseudo_City_Type_MERC__c</fullName>
        <description>The code value of the purpose of the Pseudo City.  Listed below are examples and may not be complete:
 - Booking
 - Ticketing
Oliver Dunford 14th Dec</description>
        <label>Pseudo City Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rail_Fr_Bss_Cd_MERC__c</fullName>
        <description>The unique identifier that is used to tie fare rules with fare amounts.
Created by John A Adams 12/13/2013</description>
        <label>Rail Fare Basis Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Fare_Amount_MERC__c</fullName>
        <description>The amount of the rate or fare charge for this segment. Oliver Dunford 14th Dec 2013.</description>
        <label>Rate Fare Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_MERC__c</fullName>
        <description>The Record Type label to drive Email Template logic : MERC : Created on 04/09/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
</CustomObject>